Aligned-center h1 and h2 fixed, problems in firefox and safari solved

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,9 @@ header{
 
 h1{
   position: absolute;
-  margin: 0em;
+  left: 0;
+  margin: 0;
+  width: 100%;
   color: #fff;
   text-align: center;
   font-size: 4rem;
@@ -31,12 +33,14 @@ h1{
 
 h2{
   position: absolute;
+  left: 0em;
+  width: 100%;
   margin: 0em;
-  padding: 0em;
   color: #fff;
   text-align: center;
   font-size: 1rem;
   top: 115px;
+  display: inline-block;
   text-shadow: .1em .1em .1em #222;
 }
 
